Update 1. Project Description.md

--- a/Felt Needling Machine/1. Project Description.md
+++ b/Felt Needling Machine/1. Project Description.md
@@ -1,2 +1,4 @@
 # Project Description
-Felt needeling machine is a project we finished in HTAM class. We want to explore how might we reinterpret 3d modeling using felt in a felt-needling machine, and how to reproduce needling using a felt-needling machine in a fablab.
+**Felt needeling machine** is a project we finished in **HTAM** class. We want to explore how might we reinterpret **3d modeling** using **felt** in a felt-needling machine, and how to reproduce needling using a felt-needling machine in a **fablab**.
+
+## Our inspiration
