--- a/Felt Needling Machine/1. Project Description.md
+++ b/Felt Needling Machine/1. Project Description.md
@@ -2,3 +2,7 @@
 **Felt needeling machine** is a project we finished in **HTAM** class. We want to explore how might we reinterpret **3d modeling** using **felt** in a felt-needling machine, and how to reproduce needling using a felt-needling machine in a **fablab**.
 
 ## Our inspiration
+We were inspired by a brainstorming session in class. After learning and discussing the injection molding process, our group members agreed that it would be interesting to use felt instead of plastic to simulate and innovate the molding process, so we got this beautiful idea.
+ - <img width="856" height="529" alt="截屏2025-11-04 09 13 04" src="https://github.com/user-attachments/assets/f88aad50-03fe-48b8-bd07-86db55d0c74c" />
+ - <img width="932" height="632" alt="截屏2025-11-04 09 13 17" src="https://github.com/user-attachments/assets/6c543efd-3efb-49ce-a56d-684d9251b57f" />
+ - <img width="1097" height="685" alt="截屏2025-11-04 09 13 27" src="https://github.com/user-attachments/assets/a2d71413-4d56-40b0-b81a-5632ec822a1b" />
