Update 1. Project Description.md

--- a/Felt Needling Machine/1. Project Description.md
+++ b/Felt Needling Machine/1. Project Description.md
@@ -6,3 +6,13 @@ We were inspired by a brainstorming session in class. After learning and discuss
  - <img width="856" height="529" alt="截屏2025-11-04 09 13 04" src="https://github.com/user-attachments/assets/f88aad50-03fe-48b8-bd07-86db55d0c74c" />
  - <img width="932" height="632" alt="截屏2025-11-04 09 13 17" src="https://github.com/user-attachments/assets/6c543efd-3efb-49ce-a56d-684d9251b57f" />
  - <img width="1097" height="685" alt="截屏2025-11-04 09 13 27" src="https://github.com/user-attachments/assets/a2d71413-4d56-40b0-b81a-5632ec822a1b" />
+
+
+  <details>
+    <summary>We also explore some other interesting ideas like:</summary>
+    
+   1. Wooden boards are used instead of acrylic materials to form shapes by superimposing them
+   2. Replace traditional 3D printed printheads with printheads that can inject plastic.The shape is formed by injection molding into a 3D printed metal mold.
+   3. By pressing clay and molds, the action of water allows the clay to be converted between solid and flow dynamics for reuse.
+   
+  </details>
