Update 1. Project Description.md

--- a/Felt Needling Machine/1. Project Description.md
+++ b/Felt Needling Machine/1. Project Description.md
@@ -1,7 +1,7 @@
 # Project Description
 **Felt needeling machine** is a project we finished in **HTAM** class. We want to explore how might we reinterpret **3d modeling** using **felt** in a felt-needling machine, and how to reproduce needling using a felt-needling machine in a **fablab**.
 
-## Our inspiration
+## 01｜Our inspiration
 We were inspired by a brainstorming session in class. After learning and discussing the injection molding process, our group members agreed that it would be interesting to use felt instead of plastic to simulate and innovate the molding process, so we got this beautiful idea.
  - <img width="856" height="529" alt="截屏2025-11-04 09 13 04" src="https://github.com/user-attachments/assets/f88aad50-03fe-48b8-bd07-86db55d0c74c" />
  - <img width="932" height="632" alt="截屏2025-11-04 09 13 17" src="https://github.com/user-attachments/assets/6c543efd-3efb-49ce-a56d-684d9251b57f" />
@@ -16,3 +16,9 @@ We were inspired by a brainstorming session in class. After learning and discuss
    3. By pressing clay and molds, the action of water allows the clay to be converted between solid and flow dynamics for reuse.
    
   </details>
+
+## 02｜What this machine is used for?
+ - Using **barbed needles** to entangle and interlock loose wool fibers into a solid form, building up shape incrementally.
+ - **Biodegradable and Renewable**: Wool is a natural, renewable resource that decomposes at the end of its life, unlike persistent plastic waste.
+ - **Structural Flexibility**: Felted objects can possess a degree of flexibility and shock-absorption, ideal for specific applications like packaging or wearables.
+ - Here is our project poster⬇️:
