--- a/Felt Needling Machine/1. Project Description.md
+++ b/Felt Needling Machine/1. Project Description.md
@@ -22,3 +22,10 @@ We were inspired by a brainstorming session in class. After learning and discuss
  - **Biodegradable and Renewable**: Wool is a natural, renewable resource that decomposes at the end of its life, unlike persistent plastic waste.
  - **Structural Flexibility**: Felted objects can possess a degree of flexibility and shock-absorption, ideal for specific applications like packaging or wearables.
  - Here is our project poster⬇️:
+<img width="482" height="682" alt="截屏2025-11-04 09 24 31" src="https://github.com/user-attachments/assets/d362287d-3a83-45b1-83e4-d57529d49859" />
+
+## 03｜How to use this machine?
+ - Step1: Put on the felt
+ - Step2: Start the machine
+ - Step3: Rapid Pricking
+ - Step4: Get the fluffy final product
