--- a/Felt Needling Machine/3. Materials.md
+++ b/Felt Needling Machine/3. Materials.md
@@ -1,1 +1,16 @@
+# Materials
+## 01｜Raw materials:  
 
+We decided to replace 3D printed plastic with wool.  
+ - **Key benefits**:  
+ 1. **Biodegradable and renewable**: Wool is a natural and renewable resource that can decompose naturally at the end of its life cycle, unlike plastic waste.  
+ 2. **Reduced Carbon Footprint**: Wool production is less dependent on fossil fuels compared to petroleum-derived plastics.   
+ 3. **Non-toxic and safe**: The process uses natural fibers that do not produce harmful fumes, making it safer to use in homes and educational settings.  
+ 4. **Tactile Quality**: Provides a warm, soft, and textured texture that is aesthetically pleasing and pleasant to the touch.  
+ 5. **Structural flexibility**: Felt objects can have a certain degree of flexibility and shock absorption, making them ideal for specific applications such as packaging and wearable devices.
+
+## 02｜Machine model production materials:  
+ 1. **Needle**: multi-row needles, the core component in contact with wool. (We use toothpicks instead in the model)  
+ 2. **Rollers with needle foam pads** that can place materials are convenient for needle punching at more angles.
+ 3. **Guide rails (X-axis, Z-axis)**: we make them with rigid cardboard, and add weight with steel wire to maintain balance.
+ 4. Underlying **surface shell**: enclosed by cardboard.
