--- a/Felt Needling Machine/3. Materials.md
+++ b/Felt Needling Machine/3. Materials.md
@@ -1,7 +1,9 @@
 # Materials
 ## 01｜Raw materials:  
 
-We decided to replace 3D printed plastic with wool.  
+We decided to replace 3D printed plastic with wool.   
+<img width="472" height="434" alt="截屏2025-11-04 09 31 10" src="https://github.com/user-attachments/assets/b5b634df-ced9-435f-9d32-f17d25e7791f" />
+
  - **Key benefits**:  
  1. **Biodegradable and renewable**: Wool is a natural and renewable resource that can decompose naturally at the end of its life cycle, unlike plastic waste.  
  2. **Reduced Carbon Footprint**: Wool production is less dependent on fossil fuels compared to petroleum-derived plastics.   
