--- a/Felt Needling Machine/3. Materials.md
+++ b/Felt Needling Machine/3. Materials.md
@@ -16,3 +16,4 @@ We decided to replace 3D printed plastic with wool.
  2. **Rollers with needle foam pads** that can place materials are convenient for needle punching at more angles.
  3. **Guide rails (X-axis, Z-axis)**: we make them with rigid cardboard, and add weight with steel wire to maintain balance.
  4. Underlying **surface shell**: enclosed by cardboard.
+<img width="614" height="554" alt="截屏2025-11-04 09 32 25" src="https://github.com/user-attachments/assets/654a73ab-6205-42ca-92bb-e9dd6fd76525" />
