--- a/Felt Needling Machine/2. Workflow.md
+++ b/Felt Needling Machine/2. Workflow.md
@@ -1,2 +1,7 @@
 # Workflow
-
+Our workflow consists of five main parts:   
+1. Prototyping
+2. Poster production
+3. Attending Makerfaire
+4. Getting feedback
+5. Updating the open source interface.
