--- a/Felt Needling Machine/2. Workflow.md
+++ b/Felt Needling Machine/2. Workflow.md
@@ -5,3 +5,6 @@ Our workflow consists of five main parts:
 3. Attending Makerfaire
 4. Getting feedback
 5. Updating the open source interface.
+
+## 01｜Prototyping
+
